--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   english_words: ^4.0.0
   auto_size_text: ^3.0.0
+  url_launcher: ^6.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
