--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   english_words: ^4.0.0
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.6
+  share_plus: ^4.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
