--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   auto_size_text: ^3.0.0
   url_launcher: ^6.1.6
   share_plus: ^4.5.3
+  beamer: ^1.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
